--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -279,7 +279,7 @@ main {
 .main-product-detail__info {
     position: relative;
     margin-bottom: 3.2rem;
-    width: 100%;
+    width: 90%;
     min-width: 28.8rem;
     height: auto;
     text-align: center;
@@ -373,6 +373,203 @@ main {
     line-height: 2.6rem;
     color: var(--just-white);
 }
+
+.main-plans {
+    position: relative;
+    width: 100%;
+    min-width: 32rem;
+    height: auto;
+    padding: 6.4rem 0;
+    background-color: var(--off-white);
+    text-align: center;
+}
+
+.main-plans__title {
+    position: relative;
+    width: 90%;
+    min-width: 28.8rem;
+    height: auto;
+    margin: 0 auto 3.5rem;
+}
+
+.main-plans__title h2 {
+    margin-bottom: 2.4rem;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    color: var(--warm-black);
+}
+
+.main-plans__title p {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+
+.main-plans__cards-container {
+    display: flex;
+    gap: 5rem;
+    width: auto;
+    height: 29rem;
+    margin-bottom: 3.5rem; 
+    padding: 0 6.5rem;   
+    align-items: center;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+
+.main-plans__card {
+    position: relative;
+    scroll-snap-align: center;
+    width: 60%;
+    min-width: 19rem;
+    max-width: 30rem;
+    height: 25.8rem;
+    margin: 0 auto;
+    padding: 3rem 1.6rem 2.4rem;
+    background-color: var(--just-white);
+    border-radius: 0.8rem;
+    box-shadow: 0rem 0.4rem 0.8rem rgba(89, 73, 30, 0.16);
+}
+
+.main-plans__card-recommended {
+    position: absolute;
+    top: -1.5rem;
+    left: calc(50% - 5rem);
+    width: 10rem;
+    height: 3rem;
+    padding: 0.8rem;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.452rem;
+    color: var(--just-white);
+    background-color: var(--bitcoin-orange);
+    border-radius: 0.8rem;
+}
+
+.main-plans__left-arrow {
+    position: absolute;
+    top: calc(50% - 0.6rem);
+    left: -2.9rem;
+    display: inline-block;
+    width: 0.8rem;
+    height: 1.2rem;
+    background-image: url('../icons/arrow-left-light.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.main-plans__right-arrow {
+    position: absolute;
+    top: calc(50% - 0.6rem);
+    right: -2.9rem;
+    display: inline-block;
+    width: 0.8rem;
+    height: 1.2rem;
+    background-image: url('../icons/arrow-right-light.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card-info__title {
+    margin-bottom: 0.8rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #000;
+}
+
+.card-info__price {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 1.6rem;
+    font-family: 'Inter', sans-serif;
+    font-size: 5.2rem;
+    font-weight: 700;
+    line-height: 6.3rem;
+    letter-spacing: -0.4rem;
+    color: #000;
+}
+
+.card-info__price sup {
+    position: absolute;
+    top: 0.8rem;
+    left: -1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+    color: #363636;
+}
+
+.card-info__saving {
+    margin-bottom: 1.6rem;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.452;
+    color: var(--dark-grey);
+}
+
+.card-info__button--blue {
+    width: 15rem;
+    min-width: 15rem;
+    height: 4.8rem;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.823rem;
+    color: var(--warm-black);
+    background-color: var(--soft-blue);
+    border: 0.2rem solid var(--secondary-blue);
+    border-radius: 0.4rem;    
+}
+
+.card-info__button--blue span {
+    margin: 0 0.5rem 0 0.8rem;
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: text-bottom;
+    background-image: url('../icons/arrow-right-large.svg');
+    filter: invert(44%) sepia(91%) saturate(1688%) hue-rotate(182deg) brightness(99%) contrast(95%);
+}
+
+.card-info__button--orange {
+    width: 15rem;
+    min-width: 15rem;
+    height: 4.8rem;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.823rem;
+    color: var(--warm-black);
+    background-color: var(--soft-orange);
+    border: 0.2rem solid var(--bitcoin-orange);
+    border-radius: 0.4rem;    
+}
+
+.card-info__button--orange span {
+    margin: 0 0.5rem 0 0.8rem;
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: text-bottom;
+    background-image: url('../icons/arrow-right-large.svg');
+}
+
+
+
+
+
+
+
+
+
 
 
 
