--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -379,7 +379,7 @@ main {
     width: 100%;
     min-width: 32rem;
     height: auto;
-    padding: 6.4rem 0;
+    padding: 6.4rem 0 4.5rem;
     background-color: var(--off-white);
     text-align: center;
 }
@@ -411,8 +411,7 @@ main {
     display: flex;
     gap: 5rem;
     width: auto;
-    height: 29rem;
-    margin-bottom: 3.5rem; 
+    height: 29rem; 
     padding: 0 6.5rem;   
     align-items: center;
     overflow-x: scroll;
@@ -561,6 +560,34 @@ main {
     vertical-align: text-bottom;
     background-image: url('../icons/arrow-right-large.svg');
 }
+
+.footer {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 15rem;
+    background-color: var(--bitcoin-orange);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footer__left-content ul {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.8rem;
+    list-style: none;
+}
+
+.footer__left-content li {
+    margin: 0.8rem 0;
+}
+
+.footer__left-content a {
+    text-decoration: none;
+    color: var(--just-white);
+}
+
+
 
 
 
