--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -117,9 +117,9 @@ main {
 
 .main-exchange__title {
     width: 90%;
-    min-height: 13rem;
+    min-height: auto;
     max-width: 90rem;
-    margin: 4rem auto 4.8rem;
+    margin: 4rem auto 4rem;
 }
 
 .main-exchange__title h2 {
@@ -136,12 +136,27 @@ main {
     color: var(--dark-grey);
 }
 
+.main-exchange__tables-container {
+    display: flex;
+    gap: 4rem;
+    width: auto;
+    max-width: 90rem;
+    height: 27rem;
+    padding: 0 6rem;
+    margin-bottom: 6.3rem;
+    align-items: center;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+
 .currecy, .commissions {
-    width: 75%;
-    min-width: 24rem;
+    position: relative;
+    scroll-snap-align: center;
+    width: 19.5rem;
+    min-width: 19.5rem;
     max-width: 50rem;
     height: 24rem;
-    margin: 0 auto 6.4rem;
     font-family: 'Inter', sans-serif;
 }
 
@@ -238,6 +253,19 @@ main {
     font-weight: 400;
 }
 
+.currecy__right-arrow {
+    position: absolute;
+    display: inline-block;
+    top: calc(50% - 1rem);
+    right: -2.5rem;
+    width: 0.8rem;
+    height: 1.2rem;
+    background-image: url('../icons/arrow-right-light.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .commissions__title {
     margin-bottom: 1.2rem;
     padding-left: 1rem;
@@ -263,7 +291,7 @@ main {
     width: 100%;
     min-width: 32rem;
     height: auto;
-    padding: 6.4rem 1.6rem 3rem;
+    padding: 6.4rem 0 3rem;
     background-color: var(--warm-black);
 }
 
@@ -278,7 +306,7 @@ main {
 
 .main-product-detail__info {
     position: relative;
-    margin-bottom: 3.2rem;
+    margin: 0 auto 3.2rem;
     width: 90%;
     min-width: 28.8rem;
     height: auto;
@@ -300,13 +328,19 @@ main {
     color: #808080;
 }
 
+.main-product-detail__card-container {
+    width: 90%;
+    max-width: 90rem;
+    margin: 0 auto;
+}
+
 .main-product-detail__card {
     position: relative;
     width: 100%;
     min-width: 28.8rem;
     max-width: 40rem;
     height: auto;
-    margin-bottom: 1.6rem;
+    margin: 0 auto 1.6rem;
     padding: 1.6rem 2rem 2.2rem 1.6rem;
     background-color: var(--black);
     border-radius: 0.4rem;
@@ -411,6 +445,7 @@ main {
     display: flex;
     gap: 5rem;
     width: auto;
+    max-width: 80rem;
     height: 29rem; 
     padding: 0 6.5rem;   
     align-items: center;
@@ -424,7 +459,7 @@ main {
     scroll-snap-align: center;
     width: 60%;
     min-width: 19rem;
-    max-width: 30rem;
+    max-width: 19rem;
     height: 25.8rem;
     margin: 0 auto;
     padding: 3rem 1.6rem 2.4rem;
@@ -563,10 +598,16 @@ main {
 
 .footer {
     position: relative;
-    display: flex;
-    width: 100%;
-    height: 15rem;
     background-color: var(--bitcoin-orange);
+    height: auto;
+}
+
+.footer__container {
+    display: flex;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 60rem;
+    height: 15rem;
     justify-content: space-evenly;
     align-items: center;
 }
